crates_opt_client = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_opt_client.annotation(
    crate = "server_fn",
    crate_features = ["browser"],
    repositories = ["crates_opt_client"],
    deps = [],
)
crates_opt_client.annotation(
    crate = "tracing",
    crate_features = [
        "max_level_info",
        "release_max_level_info",
    ],
    repositories = ["crates_opt_client"],
)
crates_opt_client.from_cargo(
    name = "crates_opt_client",
    cargo_lockfile = "//bazel:crates_opt_client.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_opt_client, "crates_opt_client")
