crates_server = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crates_server.annotation(
    crate = "server_fn",
    crate_features = [
        "axum",
        "axum-no-default",
        "browser",
        "generic",
        "ssr",
    ],
    repositories = ["crates_server"],
    deps = [
        "@crates//:axum",
        "@crates//:http-body-util",
        "@crates//:hyper",
        "@crates//:inventory",
        "@crates//:tokio",
        "@crates//:tower",
        "@crates//:tower-layer",
    ],
)
crates_server.from_cargo(
    name = "crates_server",
    cargo_lockfile = "//bazel:crates_server.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crates_server, "crates_server")
