load("@rules_rust_wasm_bindgen//:defs.bzl", "rust_wasm_bindgen")
load("//bazel:rust_rules.bzl", "rust_rules_matrix")
load("//bazel:stylance_rules.bzl", "stylance_rule")

package(default_visibility = ["//visibility:public"])

rust_rules_matrix(
    package_name = "game",
    assets = [
        {
            "targets": glob(["src/**/*.scss"]),
            "copy": True,
        },
    ],
    crate_features = ["client"],
    overrides = {
        "client-lib": {
            "deps": ["//framework/terrazzo:client"],
        },
        "client-lib-debug": {
            "deps": ["//framework/terrazzo:client-debug"],
        },
        "client-shared-lib": {
            "deps": ["//framework/terrazzo:client"],
            "generate_tests": False,
            "rule": "shared_library",
            "target_compatible_with": ["@platforms//cpu:wasm32"],
            "crate_name": "game",
        },
        "client-shared-lib-debug": {
            "deps": ["//framework/terrazzo:client-debug"],
            "generate_tests": False,
            "rule": "shared_library",
            "target_compatible_with": ["@platforms//cpu:wasm32"],
            "crate_name": "game_debug",
        },
    },
    deps = [
        "@crates//:stylance",
        "@crates//:wasm-bindgen",
        "@crates//:web-sys",
    ],
)

rust_wasm_bindgen(
    name = "client",
    out_name = "game",
    target = "web",
    wasm_file = ":client-shared-lib",
)

rust_wasm_bindgen(
    name = "client-debug",
    out_name = "game",
    target = "web",
    wasm_file = ":client-shared-lib-debug",
)

stylance_rule(
    name = "game_scss",
    output = "target/css/game.scss",
)

rust_rules_matrix(
    package_name = "game",
    assets = [
        {
            "targets": [
                "assets/bootstrap.js",
                "assets/images/favicon.ico",
                "assets/index.html",
            ] + glob(["assets/game/**"]),
        },
        {
            "targets": [":game_scss"],
            "prefix": "target/css/",
            "copy": True,
        },
    ],
    crate_features = ["server"],
    crate_name = "game",
    overrides = {
        "server-lib": {
            "assets": [{
                "targets": [":client"],
                "prefix": "target/assets/wasm",
            }],
            "deps": ["//framework/terrazzo:server"],
        },
        "server-lib-debug": {
            "assets": [{
                "targets": [":client-debug"],
                "prefix": "target/assets/wasm",
            }],
            "deps": ["//framework/terrazzo:server-debug"],
        },
    },
    deps = [
        "@crates//:tokio",
        "@crates//:tower-http",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_rules_matrix(
    package_name = "game",
    crate_features = ["server"],
    crate_name = "game_server",
    crate_root = "src/server.rs",
    overrides = {
        "server": {
            "deps": [
                ":server-lib",
                "//framework/terrazzo:server",
            ],
        },
        "server-debug": {
            "deps": [
                ":server-lib-debug",
                "//framework/terrazzo:server-debug",
            ],
        },
    },
    rule = "binary",
    deps = [
        "@crates//:tokio",
        "@crates//:tower-http",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
