[package]
name = "game"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/client.rs"

[[bin]]
name = "game-server"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
autoclone-macro = { workspace = true, optional = true }
axum = { workspace = true, optional = true, features = [
    "http1",
    "http2",
    "tracing",
] }
http = { workspace = true, optional = true }
include_directory = { workspace = true, optional = true }
mime = { workspace = true, optional = true }
stylance = { workspace = true, optional = true }
terrazzo-client = { workspace = true, optional = true }
terrazzo-common = { workspace = true }
terrazzo-macro = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower-http = { workspace = true, optional = true, features = [
    "fs",
    "sensitive-headers",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [] }

[build-dependencies]
scopeguard = { workspace = true }
terrazzo-build = { workspace = true }

[features]
default = []
client = [
    "dep:autoclone-macro",
    "dep:stylance",
    "dep:terrazzo-client",
    "dep:terrazzo-macro",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "terrazzo-common/client",
]
server = [
    "dep:axum",
    "dep:http",
    "dep:include_directory",
    "dep:mime",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing-subscriber",
    "terrazzo-common/server",
]
max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
max_level_info = [
    "tracing/max_level_info",
    "tracing/release_max_level_info",
    "concise_traces",
]
concise_traces = ["terrazzo-client?/concise_traces"]

[package.metadata.stylance]
output_file = "./target/css/game.scss"
folders = ["./src/"]
extensions = [".scss", ".css"]

[lints.rust]
unused = "deny"
warnings = "deny"

[lints.clippy]
enum_variant_names = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
