[package]
name = "game"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "game"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
terrazzo = { workspace = true, optional = true }
terrazzo-css = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower-http = { workspace = true, optional = true, features = [
  "fs",
  "sensitive-headers",
  "trace",
] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
  "env-filter",
] }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [] }

[build-dependencies]
scopeguard = { workspace = true }
terrazzo-build = { workspace = true }

[features]
default = []
client = [
  "dep:terrazzo-css",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "terrazzo/client",
]
server = [
  "dep:tokio",
  "dep:tower-http",
  "dep:tracing",
  "dep:tracing-subscriber",
  "terrazzo/server",
]
max-level-debug = [
  "terrazzo?/max_client_level_debug",
  "tracing?/max_level_debug",
  "tracing?/release_max_level_debug",
]
max-level-info = [
  "concise-traces",
  "terrazzo?/max_client_level_info",
  "tracing?/max_level_info",
  "tracing?/release_max_level_info",
]
concise-traces = ["terrazzo?/concise-traces"]
debug = ["terrazzo/debug", "terrazzo?/diagnostics"]
no_wasm_build = []

[package.metadata.css]
output_file = "target/css/game.scss"
folders = ["src"]
extensions = [".scss", ".css"]

[lints]
workspace = true
