[package]
name = "terrazzo-pty"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Utility to run commands in a PTY"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["terrazzo", "terminal", "pty", "execute", "process"]

[lib]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
nameth = { workspace = true }
pin-project = { workspace = true }
rustix = { workspace = true, features = ["fs", "process", "pty"] }
scopeguard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt",
    "time",
] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }

[dev-dependencies]
tokio-stream = { workspace = true }
trz-gateway-common = { workspace = true }

[lints]
workspace = true
