load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("//bazel:playwright_rules.bzl", "playwright_matrix_test")
load("//bazel:stylance_rules.bzl", "stylance_rule")
load("//bazel/feature-deps:defs.bzl", "feature_deps")
load(
    ":terminal-features.bzl",
    "CLIENT_ALL_DEPS",
    "CLIENT_ALL_FEATURES",
    "CONVERTER_CLIENT_DEPS",
    "CONVERTER_CLIENT_FEATURES",
    "CONVERTER_SERVER_DEPS",
    "CONVERTER_SERVER_FEATURES",
    "MAX_LEVEL_INFO_DEPS",
    "MAX_LEVEL_INFO_FEATURES",
    "PROD_DEPS",
    "PROD_FEATURES",
    "TERMINAL_CLIENT_DEPS",
    "TERMINAL_CLIENT_FEATURES",
    "TERMINAL_SERVER_DEPS",
    "TERMINAL_SERVER_FEATURES",
)
load(":terminal_rules.bzl", "terminal_rules")

package(default_visibility = ["//visibility:public"])

terminal_rules(
    client_deps = [
        "//utils/nameth/nameth",
    ] + CLIENT_ALL_DEPS + MAX_LEVEL_INFO_DEPS,
    client_features = CLIENT_ALL_FEATURES + MAX_LEVEL_INFO_FEATURES,
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + PROD_DEPS,
    server_features = PROD_FEATURES,
)

terminal_rules(
    client_deps = [
        "//utils/nameth/nameth",
    ] + CONVERTER_CLIENT_DEPS,
    client_features = CONVERTER_CLIENT_FEATURES,
    prefix = "converter",
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + CONVERTER_SERVER_DEPS,
    server_features = CONVERTER_SERVER_FEATURES,
)

terminal_rules(
    client_deps = [
        "//utils/nameth/nameth",
    ] + TERMINAL_CLIENT_DEPS,
    client_features = TERMINAL_CLIENT_FEATURES,
    prefix = "terminal",
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + TERMINAL_SERVER_DEPS,
    server_features = TERMINAL_SERVER_FEATURES,
)

cargo_build_script(
    name = "protos",
    srcs = ["build/protos.rs"],
    data = glob(["src/**/*.proto"]),
    deps = all_crate_deps(
        package_name = "terminal",
        build = True,
    ),
)

stylance_rule(
    name = "terminal_scss",
    output = "target/css/terrazzo-terminal.scss",
)

playwright_matrix_test(
    overrides = {
        "converter-integration-test-debug": {
            "server": ":converter-server-debug",
        },
        "converter-integration-test-release": {
            "server": ":converter-server",
            "tags": ["opt_mode"],
        },
    },
    test = "tests/integration-test-converter.spec.mjs",
)

playwright_matrix_test(
    overrides = {
        "terminal-integration-test-debug": {
            "server": ":terminal-server-debug",
        },
        "terminal-integration-test-release": {
            "server": ":terminal-server",
            "tags": ["opt_mode"],
        },
    },
    test = "tests/integration-test-terminal.spec.mjs",
)

feature_deps(
    dependency_aliases = {
        "terrazzo-pty": "//pty",
        "trz-gateway-client": "//remote/client",
        "trz-gateway-common": "//remote/common",
    },
    dependency_exclusion = ["trz-gateway-server"],
)
