load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("//bazel:generated_file.bzl", "generate_file")
load("//bazel:playwright_rules.bzl", "playwright_matrix_test")
load("//bazel:scss_rules.bzl", "scss_rule")
load("//bazel/feature_deps:feature_deps_rules.bzl", "feature_deps")
load(
    ":terminal_features.bzl",
    "CLIENT_PROD_DEPS",
    "CLIENT_PROD_FEATURES",
    "CONVERTER_CLIENT_DEPS",
    "CONVERTER_CLIENT_FEATURES",
    "CONVERTER_SERVER_DEPS",
    "CONVERTER_SERVER_FEATURES",
    "PROD_DEPS",
    "PROD_FEATURES",
    "TERMINAL_CLIENT_DEPS",
    "TERMINAL_CLIENT_FEATURES",
    "TERMINAL_SERVER_DEPS",
    "TERMINAL_SERVER_FEATURES",
    "TEXT_EDITOR_CLIENT_DEPS",
    "TEXT_EDITOR_CLIENT_FEATURES",
    "TEXT_EDITOR_SERVER_DEPS",
    "TEXT_EDITOR_SERVER_FEATURES",
)
load(":terminal_rules.bzl", "terminal_assets", "terminal_rules")

package(default_visibility = ["//visibility:public"])

feature_deps(
    dependency_aliases = {
        "terrazzo-css": "//utils/css/css",
        "terrazzo-pty": "//pty",
        "trz-gateway-client": "//remote/client",
        "trz-gateway-common": "//remote/common",
    },
    dependency_exclusion = ["trz-gateway-server"],
)

terminal_assets(
    name = "assets",
    output = "terminal_assets.bzl",
    server = ":server-debug",
)

terminal_rules(
    client_deps = ["//utils/nameth/nameth"] + CLIENT_PROD_DEPS,
    client_features = CLIENT_PROD_FEATURES,
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + PROD_DEPS,
    server_features = PROD_FEATURES,
)

terminal_rules(
    client_deps = ["//utils/nameth/nameth"] + CONVERTER_CLIENT_DEPS,
    client_features = CONVERTER_CLIENT_FEATURES,
    prefix = "converter",
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + CONVERTER_SERVER_DEPS,
    server_features = CONVERTER_SERVER_FEATURES,
)

terminal_rules(
    client_deps = ["//utils/nameth/nameth"] + TERMINAL_CLIENT_DEPS,
    client_features = TERMINAL_CLIENT_FEATURES,
    prefix = "terminal",
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + TERMINAL_SERVER_DEPS,
    server_features = TERMINAL_SERVER_FEATURES,
)

terminal_rules(
    client_deps = ["//utils/nameth/nameth"] + TEXT_EDITOR_CLIENT_DEPS,
    client_features = TEXT_EDITOR_CLIENT_FEATURES,
    prefix = "text-editor",
    server_deps = [
        ":protos",
        "//remote/server:acme",
        "//utils/nameth/nameth",
    ] + TEXT_EDITOR_SERVER_DEPS,
    server_features = TEXT_EDITOR_SERVER_FEATURES,
)

cargo_build_script(
    name = "protos",
    srcs = ["build/protos.rs"],
    data = glob(["src/**/*.proto"]),
    deps = all_crate_deps(build = True),
)

scss_rule(
    name = "terminal_scss",
    output = "target/css/terrazzo-terminal.scss",
)

generate_file(
    name = "pdfjs_pdf_min_mjs_update",
    src = "@pdfjs_dist//:build/pdf.min.mjs",
    dest = "assets/pdfjs/pdf.min.mjs",
)

generate_file(
    name = "pdfjs_pdf_worker_min_mjs_update",
    src = "@pdfjs_dist//:build/pdf.worker.min.mjs",
    dest = "assets/pdfjs/pdf.worker.min.mjs",
)

playwright_matrix_test(
    overrides = {
        "converter-integration-test-debug": {
            "target_server": ":converter-server-debug",
        },
        "converter-integration-test-release": {
            "target_server": ":converter-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-converter.spec.mjs",
)

playwright_matrix_test(
    overrides = {
        "terminal-integration-test-debug": {
            "target_server": ":terminal-server-debug",
        },
        "terminal-integration-test-release": {
            "target_server": ":terminal-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-terminal.spec.mjs",
)

playwright_matrix_test(
    overrides = {
        "terminal-password-update-test-debug": {
            "target_server": ":terminal-server-debug",
        },
        "terminal-password-update-test-release": {
            "target_server": ":terminal-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-password-update.spec.mjs",
)

playwright_matrix_test(
    extra_data = ["tests/text-editor-helpers.mjs"],
    overrides = {
        "text-editor-basic-integration-test-debug": {
            "target_server": ":text-editor-server-debug",
        },
        "text-editor-basic-integration-test-release": {
            "target_server": ":text-editor-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-text-editor-basic.spec.mjs",
)

playwright_matrix_test(
    extra_data = ["tests/text-editor-helpers.mjs"],
    overrides = {
        "text-editor-file-ops-integration-test-debug": {
            "target_server": ":text-editor-server-debug",
        },
        "text-editor-file-ops-integration-test-release": {
            "target_server": ":text-editor-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-text-editor-file-ops.spec.mjs",
)

playwright_matrix_test(
    extra_data = ["tests/text-editor-helpers.mjs"],
    overrides = {
        "text-editor-upload-integration-test-debug": {
            "target_server": ":text-editor-server-debug",
        },
        "text-editor-upload-integration-test-release": {
            "target_server": ":text-editor-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-text-editor-upload.spec.mjs",
)

playwright_matrix_test(
    extra_data = [
        "tests/PlantUML.pdf",
        "tests/text-editor-helpers.mjs",
    ],
    overrides = {
        "text-editor-viewer-integration-test-debug": {
            "target_server": ":text-editor-server-debug",
        },
        "text-editor-viewer-integration-test-release": {
            "target_server": ":text-editor-server",
            "tags": ["opt_mode"],
        },
    },
    server = "//terminal/integration:exec",
    test = "tests/integration-test-text-editor-viewer.spec.mjs",
)
