[package]
name = "terrazzo-terminal"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "A simple web-based terminal emulator built on Terrazzo."
readme = "README.md"
categories = ["command-line-utilities", "wasm"]
keywords = ["terrazzo", "terminal", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "terrazzo-terminal"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
axum-extra = { workspace = true, optional = true, features = ["cookie"] }
base64 = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
cms = { workspace = true, optional = true }
const_format = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hickory-client = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
nameth = { workspace = true }
nix = { workspace = true, optional = true, features = ["signal"] }
notify = { workspace = true, optional = true }
oid-registry = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
scopeguard = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
server_fn = { workspace = true }
sha2 = { workspace = true, optional = true }
simple_asn1 = { workspace = true, optional = true }
static_assertions = { workspace = true, optional = true }
stylance = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
terrazzo = { workspace = true, optional = true }
terrazzo-pty = { workspace = true, optional = true }
thiserror = { workspace = true }
tls-parser = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tokio-rustls = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = [
    "sensitive-headers",
    "trace",
] }
tracing = { workspace = true, optional = true }
tracing-futures = { workspace = true, features = [
    "futures-03",
], optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
trz-gateway-client = { workspace = true, optional = true }
trz-gateway-common = { workspace = true, optional = true }
trz-gateway-server = { workspace = true, optional = true, features = ["acme"] }
unescaper = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4", "fast-rng"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-streams = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }

[build-dependencies]
heck = { workspace = true }
scopeguard = { workspace = true }
terrazzo-build = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
fluent-asserter = { workspace = true }

[features]
default = ["prod"]
rustdoc = []

prod = ["max-level-info", "server-all"]
server-all = [
    "converter-server",
    "logs-panel-server",
    "port-forward-server",
    "terminal-server",
    "text-editor-server",
]
client-all = [
    "converter-client",
    "logs-panel-client",
    "port-forward-client",
    "terminal-client",
    "text-editor-client",
]

client = [
    "dep:stylance",
    "dep:wasm-bindgen-futures",
    "dep:wasm-bindgen",
    "server_fn/browser",
    "terrazzo/client",
]
server = [
    "dep:axum-extra",
    "dep:base64",
    "dep:clap",
    "dep:const_format",
    "dep:futures",
    "dep:humantime",
    "dep:inventory",
    "dep:jsonwebtoken",
    "dep:nix",
    "dep:openssl",
    "dep:pbkdf2",
    "dep:pin-project",
    "dep:prost-types",
    "dep:prost",
    "dep:rpassword",
    "dep:scopeguard",
    "dep:sha2",
    "dep:tokio",
    "dep:toml",
    "dep:tonic",
    "dep:tonic-prost",
    "dep:tower-http",
    "dep:tower",
    "dep:tracing",
    "dep:trz-gateway-client",
    "dep:trz-gateway-common",
    "dep:trz-gateway-server",
    "dep:uuid",
    "server_fn/axum",
    "server_fn/browser",
    "terrazzo/server",
]
max-level-debug = [
    "terrazzo?/max_client_level_debug",
    "tracing?/max_level_debug",
    "tracing?/release_max_level_debug",
]
max-level-info = [
    "terrazzo?/max_client_level_info",
    "tracing?/max_level_info",
    "tracing?/release_max_level_info",
    "concise-traces",
]
concise-traces = ["terrazzo?/concise-traces"]
diagnostics = ["terrazzo?/diagnostics"]
no_wasm_build = []
debug = ["terrazzo?/debug"]
correlation-id = []
remotes-ui = []

terminal = ["correlation-id"]
terminal-client = [
    "client",
    "dep:futures",
    "dep:pin-project",
    "dep:scopeguard",
    "dep:wasm-streams",
    "dep:web-sys",
    "terminal",
]
terminal-server = [
    "dep:dashmap",
    "dep:pin-project",
    "dep:static_assertions",
    "dep:terrazzo-pty",
    "dep:tracing-futures",
    "server",
    "terminal",
]

text-editor = []
text-editor-client = [
    "client",
    "dep:futures",
    "dep:scopeguard",
    "dep:serde-wasm-bindgen",
    "remotes-ui",
    "text-editor",
    "web-sys/KeyboardEvent",
]
text-editor-server = [
    "dep:libc",
    "dep:notify",
    #"dep:tantivy",
    "dep:tokio-stream",
    "server",
    "text-editor",
]

converter = []
converter-client = [
    "client",
    "converter",
    "dep:web-sys",
    "remotes-ui",
    "web-sys/Clipboard",
    "web-sys/ClipboardEvent",
    "web-sys/DragEvent",
    "web-sys/HtmlTextAreaElement",
    "web-sys/InputEvent",
    "web-sys/KeyboardEvent",
    "web-sys/Navigator",
]
converter-server = [
    "converter",
    "dep:cms",
    "dep:hickory-client",
    "dep:oid-registry",
    "dep:regex",
    "dep:rustls-native-certs",
    "dep:serde_yaml_ng",
    "dep:simple_asn1",
    "dep:tls-parser",
    "dep:tokio-rustls",
    "dep:unescaper",
    "dep:url",
    "dep:x509-parser",
    "hickory-client/serde",
    "server",
]

port-forward = []
port-forward-client = [
    "client",
    "dep:bitflags",
    "dep:scopeguard",
    "dep:web-sys",
    "port-forward",
    "remotes-ui",
    "web-sys/HtmlOptionElement",
    "web-sys/HtmlSelectElement",
    "web-sys/KeyboardEvent",
]
port-forward-server = ["port-forward", "server"]

logs-panel = []
logs-panel-client = [
    "client",
    "dep:futures",
    "logs-panel",
    "web-sys/HtmlDivElement",
]
logs-panel-server = ["dep:tracing-subscriber", "logs-panel", "server"]

[package.metadata.stylance]
output_file = "./target/css/terrazzo-terminal.scss"
folders = ["./src/"]
extensions = [".scss", ".css"]

[package.metadata.docs.rs]
features = ["rustdoc"]

[lints]
workspace = true
