[package]
name = "terrazzo"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/client.rs"

[[bin]]
name = "terrazzo-server"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
autoclone-macro = { workspace = true, optional = true }
axum = { workspace = true, optional = true, features = [
    "http1",
    "http2",
    "tracing",
] }
dashmap = { workspace = true, optional = true }
futures = { workspace = true }
http = { workspace = true, optional = true }
named = { workspace = true }
pin-project = { workspace = true }
reqwest-wasm = { workspace = true, optional = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stylance = { workspace = true, optional = true }
thiserror = { workspace = true }
terrazzo-client = { workspace = true, optional = true }
terrazzo-macro = { workspace = true, optional = true }
terrazzo-pty = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower-http = { workspace = true, optional = true, features = [
    "fs",
    "sensitive-headers",
    "trace",
] }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = [
    "futures-03",
], optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-streams = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "Document",
    "Element",
    "FocusEvent",
    'Headers',
    "HtmlInputElement",
    "MouseEvent",
    "Performance",
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Window",
] }

[build-dependencies]
scopeguard = { workspace = true }
terrazzo-build = { workspace = true }

[features]
default = []
client = [
    "dep:autoclone-macro",
    "dep:stylance",
    "dep:terrazzo-client",
    "dep:terrazzo-macro",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-streams",
    "dep:web-sys",
]
server = [
    "dep:axum",
    "dep:dashmap",
    "dep:http",
    "dep:terrazzo-pty",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing-futures",
    "dep:tracing-subscriber",
]
max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
max_level_info = [
    "tracing/max_level_info",
    "tracing/release_max_level_info",
    "terrazzo-client?/concise_traces",
]

[package.metadata.stylance]
output_file = "./target/css/generated.scss"
folders = ["./src/"]
extensions = [".scss", ".css"]

[lints.rust]
unused = "deny"
warnings = "deny"

[lints.clippy]
enum_variant_names = "allow"
needless_return = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
