[package]
name = "web-terminal"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "web-terminal"
path = "src/server.rs"
required-features = ["server"]

[dependencies]
dashmap = { workspace = true, optional = true }
futures = { workspace = true }
named = { workspace = true }
pin-project = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stylance = { workspace = true, optional = true }
thiserror = { workspace = true }
terrazzo = { workspace = true }
terrazzo-pty = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["full"] }
tower-http = { workspace = true, optional = true, features = [
    "fs",
    "sensitive-headers",
    "trace",
] }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = [
    "futures-03",
], optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
    "env-filter",
] }
uuid = { workspace = true, optional = true, features = ["v4", "fast-rng"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-streams = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = [
    "DataTransfer",
    "Document",
    "DragEvent",
    "Element",
    "FocusEvent",
    "Headers",
    "HtmlInputElement",
    "MouseEvent",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[build-dependencies]
scopeguard = { workspace = true }
terrazzo-build = { workspace = true }

[features]
default = []
client = [
    "dep:stylance",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-streams",
    "dep:web-sys",
    "terrazzo/client",
]
server = [
    "dep:dashmap",
    "dep:terrazzo-pty",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing-futures",
    "dep:tracing-subscriber",
    "dep:uuid",
    "terrazzo/server",
]
max_level_debug = ["tracing/max_level_debug", "tracing/release_max_level_debug"]
max_level_info = [
    "tracing/max_level_info",
    "tracing/release_max_level_info",
    "concise_traces",
]
concise_traces = ["terrazzo/concise_traces"]

[package.metadata.stylance]
output_file = "./target/css/web-terminal.scss"
folders = ["./src/"]
extensions = [".scss", ".css"]

[lints]
workspace = true
